tests/paczka1/small_fuzzy/79628395.err
Error in line 6: IlCGl S977 92,6
Error in line 12: IlCGl S1ï7 42,4
Error in line 14: guW0Jtx8 S977 2,6
